--- a/deforestation.html
+++ b/deforestation.html
@@ -44,7 +44,7 @@
   </section>
 
   <video autoplay muted loop id="bg-video">
-  <source src="C:\Users\VANSH KAUSHIK\OneDrive\Desktop\sarthak web\istockphoto-1470661391-640_adpp_is.mp4" type="video/mp4">
+  <source src="istockphoto-1470661391-640_adpp_is.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
   <footer>
