--- a/donate.html
+++ b/donate.html
@@ -52,7 +52,7 @@
     <p class="thank-you">Thank you for caring 💚</p>
   </section>
   <video autoplay muted loop id="bg-video">
-  <source src="C:\Users\VANSH KAUSHIK\OneDrive\Desktop\sarthak web\istockphoto-1395065721-640_adpp_is.mp4" type="video/mp4">
+  <source src="istockphoto-1395065721-640_adpp_is.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
