--- a/energy.html
+++ b/energy.html
@@ -43,7 +43,7 @@
   </section>
 
 <video autoplay muted loop id="bg-video">
-  <source src= "C:\Users\VANSH KAUSHIK\OneDrive\Desktop\sarthak web\istockphoto-1130253645-640_adpp_is.mp4"type="video/mp4">
+  <source src= "istockphoto-1130253645-640_adpp_is.mp4"type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
