--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
   
 <video autoplay muted loop id="bg-video">
-  <source src= "C:\Users\VANSH KAUSHIK\OneDrive\Desktop\sarthak web\istockphoto-2167556773-640_adpp_is.mp4"type="video/mp4">
+  <source src= "istockphoto-2167556773-640_adpp_is.mp4"type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
