--- a/water.html
+++ b/water.html
@@ -45,7 +45,7 @@
 
   
 <video autoplay muted loop id="bg-video">
-  <source src= "C:\Users\VANSH KAUSHIK\OneDrive\Desktop\sarthak web\istockphoto-696517780-640_adpp_is.mp4"type="video/mp4">
+  <source src= "istockphoto-696517780-640_adpp_is.mp4"type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
