--- a/donate.html
+++ b/donate.html
@@ -47,7 +47,7 @@
     <h1>📲<mark>Scan & Donate</mark></h1>
     <p><h2>Apne phone se QR code scan karo aur apna eco-support bhejo. Har ₹1 bhi dharti ke liye valuable hai!</h2></p>
 
-    <img src="C:\Users\VANSH KAUSHIK\OneDrive\Desktop\sarthak web\b40d99c5-176f-4ece-a414-60abad049a15.jpg" alt="Donate QR Code" class="qr-code">
+    <img src="b40d99c5-176f-4ece-a414-60abad049a15.jpg" alt="Donate QR Code" class="qr-code">
 
     <p class="thank-you">Thank you for caring 💚</p>
   </section>
