--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Save Earth Campaign</title>
   <link rel="stylesheet" href="style.css">
-
+<meta name="google-site-verification" content="p7a05Tsblr5bBnI9_d9KKkoxcaZ1Ju7Odaqo9FT67dw" />
 
  <style>
     mark {
