--- a/donate.html
+++ b/donate.html
@@ -180,7 +180,7 @@ nav a {
   </section></b>
 
   <footer>
-    <p>Made by Vansh | Eco Awareness Project 💚</p>
+    <b><p> Eco Awareness Project 💚</p></b>
   </footer>
 </body>
 </html>
